--- a/2019_neurips_vigil/vigil_2019_main.tex
+++ b/2019_neurips_vigil/vigil_2019_main.tex
@@ -1,5 +1,5 @@
 \documentclass{article}
-\usepackage{neurips_2019}
+\usepackage[final]{neurips_2019}
 
 \usepackage[utf8]{inputenc} % allow utf-8 input
 \usepackage[T1]{fontenc}    % use 8-bit T1 fonts
@@ -90,9 +90,9 @@
 \newcommand{\whead}{w^{\mathrm{write}}}
 
 
-\title{A New Model}
+\title{Neuro-symbolic Reasoning of Temporal Concepts in Attention Memory}
 
-\author{}
+\author{T.S. Jayram, Vincent Albouy, Tomasz Kornuta, Ahmet Ozcan}
 
 \begin{document}
 
@@ -182,7 +182,7 @@ for 2D tensors where matrix operations are involved.
 
 \hrulefill
 
-\section{VWM Cell}
+\section{VWM cell}
 
 The VWM recurrent cell is executed for $T$ reasoning steps for every frame in
 the temporal order.  Within a single frame, the cell state at the end of each reasoning step 
