--- a/2019_neurips_vigil/vigil_2019_main.tex
+++ b/2019_neurips_vigil/vigil_2019_main.tex
@@ -90,7 +90,7 @@
 \newcommand{\whead}{w^{\mathrm{write}}}
 
 
-\title{Neuro-symbolic Reasoning of Temporal Concepts in Attention Memory}
+\title{Neuro-symbolic Reasoning about Temporal Concepts in Selective Attention Memory}
 
 \author{T.S. Jayram, Vincent Albouy, Tomasz Kornuta, Ahmet Ozcan}
 
