--- a/2019_neurips_vigil/vigil_2019_main.tex
+++ b/2019_neurips_vigil/vigil_2019_main.tex
@@ -427,14 +427,12 @@ end of the previous frame.
 	\label{fig:model}
 \end{figure}
 
-
-\begin{figure}[ht]
+\begin{figure}[b]
 	\centering
-	\includegraphics[width=\textwidth]{img/visualization}
+	\includegraphics[width=\textwidth]{img/model2}
 	\caption{Testing}
-	\label{fig:visualization}
+	\label{fig:model}
 \end{figure}
-
 
 
 \newpage
