--- a/2019_neurips_vigil/appendix_model.tex
+++ b/2019_neurips_vigil/appendix_model.tex
@@ -323,17 +323,7 @@ end of the previous frame.
 
 
 \begin{figure}[b]
-	\centering
-	\includegraphics[width=\textwidth]{img/model}
-	\caption{Testing}
+	\includegraphics[width=\textwidth]{img/model2}
 	\label{fig:model}
-\end{figure}
-
-
-\begin{figure}[ht]
-	\centering
-	\includegraphics[width=\textwidth]{img/visualization}
-	\caption{Testing}
-	\label{fig:visualization}
-\end{figure}
+\end{figure}	
 
