--- a/2019_neurips_vigil/vigil_2019_main.tex
+++ b/2019_neurips_vigil/vigil_2019_main.tex
@@ -102,8 +102,12 @@
 
 \input{model}
 
-\input{appendix_model}
+
 \newpage
 \bibliographystyle{alpha}
+\bibliography{../cog_bibliography}
+
+\newpage
+\input{appendix_model}
 
 \end{document}
