--- a/2019_neurips_vigil/appendix_model.tex
+++ b/2019_neurips_vigil/appendix_model.tex
@@ -322,8 +322,13 @@ end of the previous frame.
 
 
 
-\begin{figure}[b]
+\begin{figure}
 	\includegraphics[width=\textwidth]{img/model2}
+	\label{fig:model}
+\end{figure}	
+
+\begin{figure}
+	\includegraphics[width=\textwidth]{img/image}
 	\label{fig:model}
 \end{figure}	
 
