--- a/cog_bibliography.bib
+++ b/cog_bibliography.bib
@@ -31,4 +31,111 @@
   year    = {2019},
 }
 
+@Article{davis2016write,
+  author  = {Davis, Ernest},
+  title   = {How to write science questions that are easy for people and hard for computers},
+  journal = {AI magazine},
+  year    = {2016},
+  volume  = {37},
+  number  = {1},
+  pages   = {13--22},
+}
+
+@Article{clark2019f,
+  author  = {Clark, Peter and Etzioni, Oren and Khot, Tushar and Mishra, Bhavana Dalvi and Richardson, Kyle and Sabharwal, Ashish and Schoenick, Carissa and Tafjord, Oyvind and Tandon, Niket and Bhakthavatsalam, Sumithra and others},
+  title   = {{From'F'to'A'on the NY Regents Science Exams: An Overview of the Aristo Project}},
+  journal = {arXiv preprint arXiv:1909.01958},
+  year    = {2019},
+}
+
+@Article{ferrucci2010building,
+  author  = {Ferrucci, David and Brown, Eric and Chu-Carroll, Jennifer and Fan, James and Gondek, David and Kalyanpur, Aditya A and Lally, Adam and Murdock, J William and Nyberg, Eric and Prager, John and others},
+  title   = {Building Watson: An overview of the DeepQA project},
+  journal = {AI magazine},
+  year    = {2010},
+  volume  = {31},
+  number  = {3},
+  pages   = {59--79},
+}
+
+@Article{lecun2015deep,
+  author    = {LeCun, Yann and Bengio, Yoshua and Hinton, Geoffrey},
+  title     = {{Deep Learning}},
+  journal   = {Nature},
+  year      = {2015},
+  volume    = {521},
+  number    = {7553},
+  pages     = {436},
+  publisher = {Nature Publishing Group},
+}
+
+@InProceedings{kornuta2018accelerating,
+  author    = {Kornuta, Tomasz and Marois, Vincent and McAvoy, Ryan L and Bouhadjar, Younes and Asseman, Alexis and Albouy, Vincent and Jayram, TS and Ozcan, Ahmet S},
+  title     = {Accelerating Machine Learning Research with MI-Prometheus},
+  booktitle = {NeurIPS Workshop on Machine Learning Open Source Software (MLOSS)},
+  year      = {2018},
+  volume    = {2018},
+}
+
+@Article{mnih2015human,
+  author    = {Mnih, Volodymyr and Kavukcuoglu, Koray and Silver, David and Rusu, Andrei A and Veness, Joel and Bellemare, Marc G and Graves, Alex and Riedmiller, Martin and Fidjeland, Andreas K and Ostrovski, Georg and others},
+  title     = {Human-level control through deep reinforcement learning},
+  journal   = {Nature},
+  year      = {2015},
+  volume    = {518},
+  number    = {7540},
+  pages     = {529},
+  publisher = {Nature Publishing Group},
+}
+
+@Article{graves2016hybrid,
+  author    = {Graves, Alex and Wayne, Greg and Reynolds, Malcolm and Harley, Tim and Danihelka, Ivo and Grabska-Barwi{\'n}ska, Agnieszka and Colmenarejo, Sergio G{\'o}mez and Grefenstette, Edward and Ramalho, Tiago and Agapiou, John and others},
+  title     = {Hybrid computing using a neural network with dynamic external memory},
+  journal   = {Nature},
+  year      = {2016},
+  volume    = {538},
+  number    = {7626},
+  pages     = {471},
+  publisher = {Nature Publishing Group},
+}
+
+@Article{mogadala2019trends,
+  author  = {Mogadala, Aditya and Kalimuthu, Marimuthu and Klakow, Dietrich},
+  title   = {Trends in Integration of Vision and Language Research: A Survey of Tasks, Datasets, and Methods},
+  journal = {arXiv preprint arXiv:1907.09358},
+  year    = {2019},
+}
+
+@InProceedings{das2017visual,
+  author    = {Das, Abhishek and Kottur, Satwik and Gupta, Khushi and Singh, Avi and Yadav, Deshraj and Moura, Jos{\'e} MF and Parikh, Devi and Batra, Dhruv},
+  title     = {Visual dialog},
+  booktitle = {Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition},
+  year      = {2017},
+  pages     = {326--335},
+}
+
+@InProceedings{vaswani2017attention,
+  author    = {Vaswani, Ashish and Shazeer, Noam and Parmar, Niki and Uszkoreit, Jakob and Jones, Llion and Gomez, Aidan N and Kaiser, {\L}ukasz and Polosukhin, Illia},
+  title     = {Attention is all you need},
+  booktitle = {Advances in Neural Information Processing Systems},
+  year      = {2017},
+  pages     = {5998--6008},
+}
+
+@Article{liu2019roberta,
+  author  = {Liu, Yinhan and Ott, Myle and Goyal, Naman and Du, Jingfei and Joshi, Mandar and Chen, Danqi and Levy, Omer and Lewis, Mike and Zettlemoyer, Luke and Stoyanov, Veselin},
+  title   = {RoBERTa: A Robustly Optimized BERT Pretraining Approach},
+  journal = {arXiv preprint arXiv:1907.11692},
+  year    = {2019},
+}
+
+@InProceedings{yang2018dataset,
+  author       = {Yang, Guangyu Robert and Ganichev, Igor and Wang, Xiao-Jing and Shlens, Jonathon and Sussillo, David},
+  title        = {A dataset and architecture for visual reasoning with a working memory},
+  booktitle    = {European Conference on Computer Vision},
+  year         = {2018},
+  pages        = {729--745},
+  organization = {Springer},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
