--- a/cog_bibliography.bib
+++ b/cog_bibliography.bib
@@ -31,4 +31,12 @@
   year    = {2019},
 }
 
+
+@InProceedings{cog2018,
+	Author = {Guangyu Robert Yang and Igor Ganichev and Xiao-Jing Wang and Jonathon Shlens and David Sussillo},
+	Title = {A Dataset and Architecture for Visual Reasoning with a Working Memory},
+	Year = {2018},
+	Eprint = {arXiv:1803.06092},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
